@startuml
title Jack – Core Domain & Controller

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam wrapWidth 200

' ===== Core domain owned by Jack =====
class User {
  +userId: UUID
  +name: String
  +email: String
  --
  +startCapture(): void
  +stopCapture(): void
  +importTranscript(file: File): void
  +requestSummary(): void
  +requestActionItems(): void
  +approveResults(): void
  +export(format: ExportFormat, dest: ExportDestination): void
  +saveToWorkspace(title: String, tags: List<String>): MeetingRecord
  +search(query: String): List<MeetingRecord>
  +toggleAutoSend(eventId: String, enabled: boolean): void
}

class SystemController {
  +startCapture(): void
  +stopCapture(): Transcript
  +importTranscript(file: File): Transcript
  +createRecordBuilder(): MeetingRecordBuilder
  +generateSummary(t: Transcript): Summary
  +extractActions(t: Transcript): List<ActionItem>
  +approveResults(rec: MeetingRecord): void
  +saveRecord(rec: MeetingRecord): void
  +search(q: String): List<MeetingRecord>
  +export(rec: MeetingRecord, fmt: ExportFormat, dest: ExportDestination): ExportResult
  +autoSend(rec: MeetingRecord, eventId: String): void
}

class MeetingRecord {
  +id: UUID
  +title: String
  +tags: List<String>
  +date: LocalDateTime
  +status: ApprovalStatus
  +participants: List<Participant>
  +transcript: Transcript
  +summary: Summary
  +actions: List<ActionItem>
  --
  +setTranscript(t: Transcript): void
  +setSummary(s: Summary): void
  +setActions(a: List<ActionItem>): void
}

' === Builder pattern for MeetingRecord ===
class MeetingRecordBuilder {
  -record: MeetingRecord
  --
  +withTitle(title: String): MeetingRecordBuilder
  +withTags(tags: List<String>): MeetingRecordBuilder
  +withDate(date: LocalDateTime): MeetingRecordBuilder
  +withParticipants(p: List<Participant>): MeetingRecordBuilder
  +withTranscript(t: Transcript): MeetingRecordBuilder
  +withSummary(s: Summary): MeetingRecordBuilder
  +withActions(a: List<ActionItem>): MeetingRecordBuilder
  +build(): MeetingRecord
}

class Workspace {
  +records: List<MeetingRecord>
  --
  +save(rec: MeetingRecord): void
  +findByQuery(q: String): List<MeetingRecord>
  +get(id: UUID): MeetingRecord
}

class Participant {
  +name: String
  +email: String
  +role: String
}

class Transcript {
  +id: UUID
  +rawText: Text
  +timestamps: List<Timestamp>
  +source: TranscriptSource
}

class Summary {
  +id: UUID
  +topics: List<String>
  +decisions: List<String>
  +notes: Text
}

class ActionItem {
  +id: UUID
  +title: String
  +owner: Participant
  +dueDate: LocalDate
  +status: ActionStatus
}

' ===== Service interfaces Jack depends on (implemented by partners) =====
class Recorder
interface Transcriber
interface Summarizer
interface Exporter
class SearchService
interface Notifier

' ===== Enums / value objects (lightweight) =====
enum TranscriptSource {
  LIVE
  IMPORTED
}

enum ApprovalStatus {
  DRAFT
  APPROVED
}

enum ActionStatus {
  OPEN
  DONE
}

enum ExportFormat {
  GOOGLE_DOC
  MARKDOWN
  CLIPBOARD
  EMAIL
}

enum ExportDestination {
  DRIVE
  FILE
  CLIPBOARD
  MAIL
}

class ExportResult {
  +success: boolean
  +link: String
  +message: String
}

class Timestamp {
  +start: Time
  +end: Time
}

class Time

' ===== Relationships =====
User --> SystemController : uses
SystemController ..> Recorder : controls
SystemController ..> Transcriber : uses
SystemController ..> Summarizer : uses
SystemController ..> Workspace : saves/loads
SystemController ..> Exporter : uses
SystemController ..> SearchService : queries
SystemController ..> Notifier : uses
SystemController ..> MeetingRecordBuilder : creates builder

MeetingRecordBuilder --> MeetingRecord : builds

Workspace o-- "0..*" MeetingRecord : stores
MeetingRecord *-- Transcript
MeetingRecord *-- Summary
MeetingRecord *-- "0..*" ActionItem
MeetingRecord o-- "0..*" Participant

ActionItem o-- "0..1" Participant : owner
User o-- "0..*" MeetingRecord : views

@enduml
